<resources>
    <string name="app_name">Remote Config en Firebase</string>

    <string name="action_settings">Settings</string>

    <string name="title_signup">Quick Signup</string>

    <string name="prompt_signup">Please complete this quick signup</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_promo_code">Enter Promo Code</string>

    <string name="button_signup">Sign Up!</string>
    <string name="toast_sign_up">Now signing you up</string>

    <string name="error_short_password">Password should be more than %1$d characters</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>


</resources>
